# room-temp-open-web-ui

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  dependency_analysis.md  example_client.py  initial.prompt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  cicd.yml  docker-build.yml
src/: __init__.py  mcp_aggregator.py  openwebui_bridge.py  server.py  web_app.py
src/static/: style.css
src/templates/: index.html
tests/: __init__.py  run_all.py  test_mcp_aggregator.py  test_openwebui_bridge.py  test_server.py  test_server_history.py  test_web_app.py  test_with_ollama.py
utils/: config.py  models.py
