[project]
name = "room-temp-open-web-ui"
version = "0.1.0"
description = "OpenWebUI with MCP integration for room temperature monitoring"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "open-webui",
    "fastmcp",
    "ollama",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "coverage",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pylint",
    "coverage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

